welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:7: error: ';' expected but '{' found.
}while (crossing()) {
                    ^